prevent scrollbar to push content to the left

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* When a scrollbar shows up, the content is pushed to the left. We want to prevent that */
+html {
+    margin-left: calc(100vw - 100%);
+}
+
 body {
     background-color: #000;
     color: #FFF;
